--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,8 @@
         <div class="nav-links">
           <% if user_signed_in? %>
             <span><%= current_user.email %></span>
-            <%= link_to "Logout",
-                        destroy_user_session_path,
-                        data: { turbo_method: :delete } %>
+          
+           <%= button_to "Logout", destroy_user_session_path, method: :delete %>
           <% else %>
             <%= link_to "Login", new_user_session_path %>
             <%= link_to "Sign up", new_user_registration_path %>
